syntax = "proto3";
option go_package = "github.com/Sh1wOo/client-server-solid-golang-grpc";

package library;

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  int32 year = 4;
}

message BookRequest {
  Book book = 1;
}

message BookResponse {
  Book book = 1;
}

service LibraryService {
  rpc CreateBook(BookRequest) returns (BookResponse) {}
  rpc GetBook(BookRequest) returns (BookResponse) {}
  rpc UpdateBook(BookRequest) returns (BookResponse) {}
  rpc DeleteBook(BookRequest) returns (BookResponse) {}
}